Mobile Alignment Fix

--- a/src/style.css
+++ b/src/style.css
@@ -296,6 +296,7 @@ body {
   .grid-container#about-content {
     display: flex;
     gap: 25px;
+    align-items: center;
   }
 
   #about-img {
@@ -422,8 +423,8 @@ body {
   #contact-box {
     position: relative;
     max-width: 30rem;
-    margin-left: 10%;
-    
+    max-height: 16rem;
+    margin-left: 3rem;
   }
   
   #contact-box img {
@@ -438,7 +439,49 @@ body {
     opacity: .95;
   }
 
- 
+  .grid-container#contact-container {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+  }
+
+  .contact-form {
+    width: 100%;
+    padding: 12px;
+    border-radius: 5px;
+  }
+
+  .contact-form #contact-element {
+    border: 2px solid var(--link-color);
+    box-shadow: 4px 4px 0px 0 var(--link-color);
+    height: 25px;
+    width: 80%;
+    margin: 10px 0px 10px 0px;
+    background-color: var(--color-light);
+  }
+
+  .contact-form #message {
+    border: 2px solid var(--link-color);
+    box-shadow: 4px 4px 0px 0 var(--link-color);
+    height: 150px;
+    width: 80%;
+    margin: 10px 0px 10px 0px;
+    background-color: var(--color-light);
+  }
+
+  .contact-form #submit {
+    border: none;
+    background-color: var(--link-color);
+    color: var(--color-dark);
+    height: 2rem;
+    width: 5rem;
+    border-radius: 5px;
+  }
+
+  #submit:hover {
+    background-color: var(--button-color);
+    color: var(--color-light);
+  }
   
   
   /*/ Footer /*/
@@ -542,13 +585,12 @@ body {
 
   /* Stack image above text */
   .grid-container#about-content {
-    display: grid;
-    grid-template-columns: auto;
-    place-items: center;
+    flex-wrap: wrap;
+    margin: 0 25px 0 25px;
   }
 
   #about-img {
-    margin-bottom: 50px;
+    margin: 0;
   }
 
   /* Mobile Contact Section */
@@ -562,7 +604,11 @@ body {
   }
 
   #contact-box {
-    margin-left: 0;
+    margin: 0;
+  }
+
+  .contact-form {
+    margin-left: 1rem;
   }
 
 }
@@ -582,6 +628,8 @@ body {
     max-width: 350px;
     margin-left: 0;
   }
+
+
   
   /*/ Mobile Projects Section /*/
   /* Swtich Big Project Boxes to Little Project Boxes */
